[package]
name = "monotone-cli"
version = "0.4.0"
authors = ["Chris Dawes <cmsd2@cantab.net>"]
license = "Apache-2.0"
description = "Monotonic counter cli implemented on top of AWS DynamoDB."
repository = "https://github.com/cmsd2/monotone"
categories = ["algorithms", "concurrency", "data-structures", "network-programming"]
keywords = ["monotonic", "counter", "distributed", "AWS"]

[dependencies]
error-chain = "0.9.0"
rusoto = { version = "0.24.0", features = ["dynamodb"]}
env_logger = "0.4.0"
log = "0.3.6"
clap = "2.20.4"
monotone = { path = "../monotone", features = ["aws"], version = "0.4" }
serde = "0.9"
serde_derive = "0.9"
serde_json = "0.9"

[[bin]]
name = "monotone"
