[package]
name = "monotone"
version = "0.4.0"
authors = ["Chris Dawes <cmsd2@cantab.net>"]
license = "Apache-2.0"
description = "Library of counters and queues for coordination in distributed systems."
repository = "https://github.com/cmsd2/monotone"
categories = ["algorithms", "concurrency", "data-structures", "network-programming"]
keywords = ["monotonic", "counter", "distributed", "AWS"]

[dependencies]
error-chain = "0.9.0"
rusoto = { version = "0.22.0", optional = true, features = ["dynamodb"]}
log = "0.3.6"
rand = "0.3"
serde = "0.9"
serde_derive = "0.9"
serde_json = "0.9"
hyper = "0.10"

[features]
default = []
all = ["aws"]
aws = ["rusoto"]
